# parq

./: .gitignore  404.html  Cargo.toml  LICENSE  MATURIN.md  Makefile  README.md  clippy.toml  index.html  mkdocs.yml  sitemap.xml
.github/workflows/: ci.yml
architecture/: index.html
benches/: throughput.rs
crates/parq/: Cargo.toml
crates/parq-chunk/: Cargo.toml
crates/parq-chunk/src/: lib.rs
crates/parq-core/: Cargo.toml
crates/parq-core/benches/: throughput.rs
crates/parq-core/src/: lib.rs
crates/parq-error/: Cargo.toml
crates/parq-error/src/: lib.rs
crates/parq-flatten/: Cargo.toml
crates/parq-flatten/src/: lib.rs
crates/parq-io/: Cargo.toml
crates/parq-io/src/: lib.rs
crates/parq-metrics/: Cargo.toml
crates/parq-metrics/src/: lib.rs
crates/parq-parser/: Cargo.toml
crates/parq-parser/src/: lib.rs
crates/parq-python/: Cargo.toml  pyproject.toml
crates/parq-python/src/: lib.rs
crates/parq-schema/: Cargo.toml
crates/parq-schema/src/: lib.rs
crates/parq/src/: main.rs
docs/: architecture.md  index.md  maturin_guide.md  python.md  quarantine.md  telemetry.md
maturin_guide/: index.html
python/: index.html
quarantine/: index.html
scripts/: generate_data.py  python_baseline.py
search/: search_index.json
stylesheets/: custom.css
telemetry/: index.html
