[package]
name        = "parq-core"
description = "Pipeline orchestrator for parq: mmap → chunk → parse → write"
version.workspace   = true
edition.workspace   = true
license.workspace   = true
authors.workspace   = true
repository.workspace = true

[features]
default = []
simd    = ["parq-parser/simd"]

[dependencies]
parq-chunk   = { path = "../parq-chunk"   }
parq-error   = { path = "../parq-error"   }
parq-io      = { path = "../parq-io"      }
parq-metrics = { path = "../parq-metrics" }
parq-parser  = { path = "../parq-parser"  }
parq-schema  = { path = "../parq-schema"  }

arrow             = { workspace = true }
parquet           = { workspace = true }
rayon             = { workspace = true }
crossbeam-channel = { workspace = true }
memmap2           = { workspace = true }
anyhow            = { workspace = true }
tracing           = { workspace = true }
num_cpus          = { workspace = true }
sha2              = { workspace = true }

[[bench]]
name    = "throughput"
harness = false

[dev-dependencies]
criterion = { workspace = true }
tempfile  = { workspace = true }
