[package]
name        = "parq-error"
description = "Error types for the parq toolchain"
version.workspace   = true
edition.workspace   = true
license.workspace   = true
authors.workspace   = true
repository.workspace = true

[dependencies]
thiserror  = { workspace = true }
serde_json = { workspace = true }
arrow      = { workspace = true }
parquet    = { workspace = true }
