[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "parq"
version = "0.2.0"
description = "Zero-copy, multi-threaded NDJSON to Parquet preprocessor"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "parq contributors", email = "contributors@parq.dev" }
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License"
]

[tool.maturin]
features = ["pyo3/extension-module"]
manifest-path = "Cargo.toml"
